fixed the layout on mobile devices

--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -110,7 +110,7 @@
       position: absolute;
       right: 20px;
       top: 15px;
-      font-size: 18px;
+      font-size: 16px;
 
       a {
         margin-top: 7px;
@@ -119,7 +119,7 @@
 
       #datepicker {
         border: 0;
-        font-size: 18px;
+        font-size: 16px;
         width: 100px;
         font-family: "Open Sans";
         float: left;
