--- a/app/assets/stylesheets/layouts.scss
+++ b/app/assets/stylesheets/layouts.scss
@@ -9,7 +9,6 @@
 
 #logjam-content {
   position: relative;
-  flex-direction: row;
   width: 100%;
 
   > h2 {
